[gd_scene load_steps=10 format=2]

[ext_resource path="res://LooneyLips.gd" type="Script" id=1]
[ext_resource path="res://gfx/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gfx/blue_button11.png" type="Texture" id=4]
[ext_resource path="res://gfx/blue_button12.png" type="Texture" id=5]
[ext_resource path="res://Story0.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 3 )

[node name="LooneyLips" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayText" type="Label" parent="VBoxContainer"]
margin_top = 75.0
margin_right = 976.0
margin_bottom = 475.0
rect_min_size = Vector2( 0, 400 )
custom_fonts/font = SubResource( 1 )
text = "Placeholder text"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 479.0
margin_right = 976.0
margin_bottom = 552.0
custom_constants/separation = 20
alignment = 2

[node name="PlayerText" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 776.0
margin_bottom = 73.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 796.0
margin_right = 976.0
margin_bottom = 73.0
rect_min_size = Vector2( 180, 73 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/TextureButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0
margin_top = -30.0
margin_right = 85.0
margin_bottom = 30.0
rect_min_size = Vector2( 170, 0 )
custom_fonts/font = SubResource( 3 )
text = "Ok"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoryBook" type="Node" parent="."]

[node name="Story0" type="Node" parent="StoryBook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "a name", "a noun", "an adverb", "an adjective" )
story = "Once upon a time someone called %s ate a %s flavoured sandwich which made him feel all %s inside. It was %s day."

[node name="Story1" type="Node" parent="StoryBook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "a name", "an adjective", "an adverd", "a noun" )
story = "There was once a warrior named  %s. %s they said he was, he fought %s , which granted him the people's %s "

[node name="Story2" type="Node" parent="StoryBook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "a name", "a thing", "a feeling", "another feeling", "some things" )
story = "Once upon a time a %s ate a %s and felt very %s. It was a %s day for all good %s."

[node name="Story3" type="Node" parent="StoryBook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "a noun", "a name", "an adjective", "another name" )
story = "There once was %s called %s who searched far and wide for the mythical %s of %s."
[connection signal="text_entered" from="VBoxContainer/HBoxContainer/PlayerText" to="." method="_on_PlayerText_text_entered"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
